[package]
name = "xen-dao-voting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xen_dao_voting"

[features]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
